--- a/Streaming/str.bib
+++ b/Streaming/str.bib
@@ -54,5 +54,36 @@ booktitle = {Principles of Physical Cosmology by P.J.E.~Peebles.~Princeton Unive
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{uh15,
+	author = {{Uhlemann}, C. and {Kopp}, M. and {Haugg}, T.},
+	title = "{Edgeworth streaming model for redshift space distortions}",
+	journal = {\prd},
+	archivePrefix = "arXiv",
+	eprint = {1503.08837},
+	keywords = {Galaxy groups clusters and superclusters, large scale structure of the Universe, Dark matter, Superclusters, large-scale structure of the Universe, Cosmology},
+	year = 2015,
+	month = sep,
+	volume = 92,
+	number = 6,
+	eid = {063004},
+	pages = {063004},
+	doi = {10.1103/PhysRevD.92.063004},
+	adsurl = {http://adsabs.harvard.edu/abs/2015PhRvD..92f3004U},
+	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
-
+@ARTICLE{bi2,
+	author = {{Bianchi}, D. and {Percival}, W.~J. and {Bel}, J.},
+	title = "{Improving the modelling of redshift-space distortions- II. A pairwise velocity model covering large and small scales}",
+	journal = {\mnras},
+	archivePrefix = "arXiv",
+	eprint = {1602.02780},
+	keywords = {cosmology: theory, dark energy, large-scale structure of Universe},
+	year = 2016,
+	month = dec,
+	volume = 463,
+	pages = {3783-3798},
+	doi = {10.1093/mnras/stw2243},
+	adsurl = {http://adsabs.harvard.edu/abs/2016MNRAS.463.3783B},
+	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
