--- a/Streaming/streaming.tex
+++ b/Streaming/streaming.tex
@@ -339,9 +339,9 @@
 	
 	To have a better understanding of the relative line-of-sight velocity distribution, it is important to know how halo and non-halo particles plays a role in the distribution. For this purpose, we classify the dark matter particles as either `halo' particles or `field' particle. This was done with the help of ROCKSTAR halo finder. Particles which were identified to belong to a halo were subsequently classified as `halo' particles and the rest as `field' particles.  
 	
-	Fig~\ref{fig:rel_los_comp} shows the result of how the components contribute to the total distribution. At the very small scales as seen in the case of mean distance of $r_{\perp} = r_{\parallel} = 0.5 h^{-1}$ Mpc, the distribution is powered by the halo-halo particle pairs. This is not surprising as at these scales, we expect the pairs to be mostly in halos. As the pair separation increases however, the field-field component seems to be the dominant factor especially at the peaks of the distribution. The mean infalling velocity hence seems to be driven by the field-field particle pairs. However it should be noted that halo-halo pairs have a more negative in-fall velocity compared to the field pairs. Narrow wings of the field-field component indicates that the pairs  which does not belong to halos mostly undergo coherent motion. The wings of the total distribution are contributed by both the halo-halo and the field-halo pairs. This clearly shows how the non-Gaussian nature of the relative line-of-sight velocity distribution for the full DM particles arises from the combined effect of the field and halo particles. 
+	Fig.~\ref{fig:rel_los_comp} shows the result of how the components contribute to the total distribution. We see that at all scales we have considered here, the field-field component seems to be the dominant factor. The mean infalling velocity of the full DM distribution hence seems to be driven by the field-field particle pairs. However it should be noted that halo-halo pairs have a more negative in-fall velocity compared to the field pairs.  Narrow wings of the field-field component with the mean in-fall velocity of zero indicates that the pairs  which does not belong to halos mostly undergo coherent motion. The wings of the total distribution are contributed by both the halo-halo and the field-halo pairs. The combination of distributions of these components with different mean in-fall velocity gives rise to the asymmetry along with a fatter tail than what is to be expected from a normal distribution. 
 	
-	Similarly we can dissect the halo-halo PDF into halo mass subsamples. Fig~\ref{fig:rel_los_mass_comp} shows the contribution from each 
+	Similarly we can dissect the halo-halo PDF into further subsamples defined by the halo mass. Fig.~\ref{fig:rel_los_mass_comp} shows the contribution from each of the subsamples considered which is normalised to the halo PDF. It should be noted that the PDFs of the subsamples were created using particles of same mass subsample, cross contributions are not shown here. 
 	
 	
 	\begin{figure*}
