--- a/Streaming/streaming.tex
+++ b/Streaming/streaming.tex
@@ -341,7 +341,7 @@
 	
 	Fig.~\ref{fig:rel_los_comp} shows the result of how the components contribute to the total distribution. We see that at all scales we have considered here, the field-field component seems to be the dominant factor. The mean infalling velocity of the full DM distribution hence seems to be driven by the field-field particle pairs. However it should be noted that halo-halo pairs have a more negative in-fall velocity compared to the field pairs.  Narrow wings of the field-field component with the mean in-fall velocity of zero indicates that the pairs  which does not belong to halos mostly undergo coherent motion. The wings of the total distribution are contributed by both the halo-halo and the field-halo pairs. The combination of distributions of these components with different mean in-fall velocity gives rise to the asymmetry along with a fatter tail than what is to be expected from a normal distribution. 
 	
-	Similarly we can dissect the halo-halo PDF into further subsamples defined by the halo mass. Fig.~\ref{fig:rel_los_mass_comp} shows the contribution from each of the subsamples considered which is normalised to the halo PDF. It should be noted that the PDFs of the subsamples were created using particles of same mass subsample, cross contributions are not shown here. 
+	Similarly we can dissect the halo-halo PDF into further subsamples defined by the halo mass. Fig.~\ref{fig:rel_los_mass_comp} shows the contribution from each of the subsamples considered which is normalised to the halo PDF. It should be noted that the PDFs of the subsamples were created using particles of same mass subsample, cross contributions are not shown here. The mean in-fall velocity goes lower with higher mass, which is expected as with a massive halo, the potential of the system increases and thus the pairs fall into each other at a faster pace resulting in a lower mean in-fall velocity.
 	
 	
 	\begin{figure*}
@@ -370,7 +370,7 @@
 
 	\section{Phenomenological Model}
 
-	GH is the mixture modelling consisting of normal distribution and Generalised Inverse Gaussian distribution. It is similar to modelling pairwise velocity as mixture of the normal and log-normal density (see tinker). GIG and log-normal are very similar. Try to connect them and see. Density weighted velocity, so would make sense to connect them. Could explain why we use it and why they could be the true distribution.
+	In prior sections, we showed the validity of the streaming equation and how different components. However we would like to have a phenomenological model to describe the relative line-of-sight velocity and use that in the streaming equation. GH is the mixture modelling consisting of normal distribution and Generalised Inverse Gaussian distribution. It is similar to modelling pairwise velocity as mixture of the normal and log-normal density (see tinker). GIG and log-normal are very similar. Try to connect them and see. Density weighted velocity, so would make sense to connect them. Could explain why we use it and why they could be the true distribution.
 	
 	\section{Conclusions}
 	
